tests-integration/tests/resolving/snapshots/resolving__generated__001_local_resolution_explicit_self.snap
---
source: tests-integration/tests/resolving/generated.rs
expression: report
---
module ExplicitSelf

Unqualified Imports:

Qualified Imports:

Exported Terms:
  - value
  - HiddenType
  - Just
  - Id
  - Nothing
  - HiddenConstructor
  - eq

Exported Types:
  - HiddenConstructor
  - HiddenType
  - Id
  - Eq
  - Synonym
  - Maybe

Local Terms:
  - value
  - eqMaybe
  - eqId
  - eq
  - HiddenType
  - Just
  - Id
  - Nothing
  - HiddenConstructor

Local Types:
  - HiddenConstructor
  - HiddenType
  - Id
  - Eq
  - Synonym
  - Maybe

Errors:
