tests-integration/tests/resolving/snapshots/resolving__generated__002_import_resolution_library.snap
---
source: tests-integration/tests/resolving/generated.rs
expression: report
---
module Library

Unqualified Imports:

Qualified Imports:

Exported Terms:
  - MkHideTy
  - Ctor3
  - libFn
  - MkLibTy
  - Ctor1
  - Ctor2
  - hideMe

Exported Types:
  - LibTy
  - MultiTy
  - TypeOnly
  - HideTy

Local Terms:
  - MkHideTy
  - Ctor3
  - libFn
  - MkLibTy
  - Ctor1
  - Ctor2
  - hideMe

Local Types:
  - LibTy
  - MultiTy
  - TypeOnly
  - HideTy

Errors:
