tests-integration/tests/resolving/snapshots/resolving__generated__003_import_errors_duplicate_local.snap
---
source: tests-integration/tests/resolving/generated.rs
expression: report
---
module DuplicateLocal

Unqualified Imports:

Qualified Imports:

Exported Terms:
  - value

Exported Types:
  - Data

Local Terms:
  - value

Local Types:
  - Data

Errors:
  - ExistingTerm { existing: (Idx::<File>(9), Idx::<TermItem>(0)), duplicate: (Idx::<File>(9), Idx::<TermItem>(1)) }
  - ExistingType { existing: (Idx::<File>(9), Idx::<TypeItem>(0)), duplicate: (Idx::<File>(9), Idx::<TypeItem>(1)) }
  - TermExportConflict { existing: (Idx::<File>(9), Idx::<TermItem>(0), Local), duplicate: (Idx::<File>(9), Idx::<TermItem>(1), Local) }
  - TypeExportConflict { existing: (Idx::<File>(9), Idx::<TypeItem>(0), Local), duplicate: (Idx::<File>(9), Idx::<TypeItem>(1), Local) }
