tests-integration/tests/resolving/snapshots/resolving__generated__003_import_errors_invalid_constructor.snap
---
source: tests-integration/tests/resolving/generated.rs
expression: report
---
module InvalidConstructor

Unqualified Imports:

Qualified Imports:

Exported Terms:

Exported Types:
  - Invalid

Local Terms:

Local Types:
  - Invalid

Errors:
