tests-integration/tests/resolving/snapshots/resolving__generated__003_import_errors_library_a.snap
---
source: tests-integration/tests/resolving/generated.rs
expression: report
---
module LibraryA

Unqualified Imports:

Qualified Imports:

Exported Terms:
  - html

Exported Types:
  - Css
  - Html

Local Terms:
  - html

Local Types:
  - Css
  - Html

Errors:
