tests-integration/tests/resolving/snapshots/resolving__generated__004_import_re_exported_constructor_library.snap
---
source: tests-integration/tests/resolving/generated.rs
expression: report
---
module Library

Unqualified Imports:

Qualified Imports:

Internal Terms:
  - Internal is Implicit

Internal Types:
  - Internal is Implicit

Exported Terms:
  - Internal

Exported Types:
  - Internal

Local Terms:

Local Types:

Errors:
